Added scholar icon

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,6 +28,9 @@
 /* Font Awesome - icon font set */
 @import "vendor/font-awesome/font-awesome";
 
+/* Academicon - academic icon font set */
+@import "vendor/academicons/academicons";
+
 /* Magnific Popup - responsive lightbox */
 @import "vendor/magnific-popup/magnific-popup"; // Magnific Popup
 
