--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -72,9 +72,15 @@
           Facebook
         </a></li>
       {% endif %}
+      {% if author.google_scholar %}
+        <li><a href="https://scholar.google.co.uk/citations?user=+{{ author.google_plus }}" itemprop="sameAs">
+          <i class="ai ai-fw ai-google-scholar-square" aria-hidden="true"></i>
+          Google Scholar
+        </a></li>
+      {% endif %}
       {% if author.google_plus %}
         <li><a href="https://plus.google.com/+{{ author.google_plus }}" itemprop="sameAs">
-          <i class="fa fa-fw fa-google-plus-square" aria-hidden="true"></i> 
+          <i class="fa fa-fw fa-google-plus-square" aria-hidden="true"></i>
           Google+
         </a></li>
       {% endif %}
