--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -14,7 +14,7 @@ $indent-var                 : 1.3em !default;
 
 /* system typefaces */
 $serif                      : Georgia, Times, serif !default;
-$sans-serif                 : -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
+$sans-serif                 : "Lato", "Helvetica", -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
 $monospace                  : Monaco, Consolas, "Lucida Console", monospace !default;
 
 /* sans serif typefaces */
@@ -30,7 +30,7 @@ $garamond                   : Garamond, serif !default;
 
 $global-font-family         : $sans-serif !default;
 $header-font-family         : $sans-serif !default;
-$caption-font-family        : $serif !default;
+$caption-font-family        : sans-serif !default;
 
 /* type scale */
 $type-size-1                : 2.441em !default;  // ~39.056px
