--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,7 @@
 <script src="{{ '/assets/js/main.min.js' | absolute_url }}"></script>
-<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?...">
+</script>
 
 {% include analytics.html %}
 {% include /comments-providers/scripts.html %}
